Added to the work page

--- a/index.html
+++ b/index.html
@@ -47,47 +47,28 @@
 									<h2>Work</h2>
 								</header>
 								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
+									Here are examples of coding projects that I have done, they are under 
+									Honor code so the code is not provided but instead functionality through pictures
 								</p>
 								<section>
 									<div class="row">
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+										<div class="large">
+											<a class="image fit"><img src="images/MipsC.png" alt=""></a>
+											<p>
+												Provided here is my Mips32 compiler created in C. The program takes the assembly
+												file on the left and turns it into the binary file on the right. It uses multiple 
+												C files to parse the input, throw away comments, and uses different case based off
+												what command it is such as a J,I, or R command, or a psuedo command. 
+											</p>
+										<div class="large">
+											<a class="image fit"><img src="images/travelGuide.png"></a>
+											<p>
+												The following picture shows a travel guide created using SwiftUI. It takes travel data from
+												https://travel.usnews.com to display information about the best places to travel, you can look
+												at specific countires data, and you can take surveys on your favorite place to travel with data 
+												stored into a JSON file. 
+											</p>
 										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
 										</div>
 									</div>
 								</section>
@@ -111,8 +92,9 @@
 													mgannon3500@vt.edu
 												</p>
 												<p>
-													
+													GitHub (only contains programs from my tutoring at IDTech that I created to teach students):
 												</p>
+												<a href="https://github.com/Gannon517" class="icon brands alt-fa-github"><span>GitHub</span></a>
 											</div>
 										</div>
 									</div>
