--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="images/HeadShot.jpg" alt="" />
+									<img src="images/NewHeadshot.JPG" alt="" />
 								</a>
 							</article>
 
