update to the works page

--- a/index.html
+++ b/index.html
@@ -47,8 +47,13 @@
 									<h2>Work</h2>
 								</header>
 								<p>
-									Here are examples of coding projects that I have done, they are under 
-									Honor code so the code is not provided but instead functionality through pictures
+									About me: I am a very strong programmer, communicator, and teamworker.
+									I have plenty of experience working in the computer science industry and 
+									working from a remote setting and would make a great addition to any 
+									software team. My coding strng suits are presented below, with some of them
+									being low level C programming, iOS App development, Python, Java, and of 
+									course HTML, CSS, and Javascript to create this website and host through Github 
+									and AWS servers.
 								</p>
 								<section>
 									<div class="row">
@@ -61,12 +66,14 @@
 												what command it is such as a J,I, or R command, or a psuedo command. 
 											</p>
 										<div class="large">
-											<a class="image fit"><img src="images/travelGuide.png"></a>
+											<a class="image fit"><img src="images/nationalParks.jpg"></a>
 											<p>
-												The following picture shows a travel guide created using SwiftUI. It takes travel data from
-												https://travel.usnews.com to display information about the best places to travel, you can look
-												at specific countires data, and you can take surveys on your favorite place to travel with data 
-												stored into a JSON file. 
+												The App shown is a National Parks travel Guide Application. It takes advantage of 
+												Online API data to search for national parks within the country and provide details 
+												about them to the user is a Form view. It also stores favorite parks for the user using 
+												Apple's core data type. Some features that are provided in the application include: 
+												Photo Capture Views, Voice recording, Voice to text, Location services, and in app web 
+												views of the national parks website. 
 											</p>
 										</div>
 										</div>
