--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 													mgannon3500@vt.edu
 												</p>
 												<p>
-													GitHub (only contains programs from my tutoring at IDTech that I created to teach students):
+													GitHub:
 												</p>
 												<a href="https://github.com/Gannon517" class="icon brands alt-fa-github"><span>GitHub</span></a>
 											</div>
