--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
 						<a href="https://www.linkedin.com/in/michaelgannonvt" class="icon brands fa-linkedin"><span>linkedin</span></a>
+						<a href="https://github.com/Gannon517" class="icon brands alt-fa-github"><span>Github</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -98,10 +99,6 @@
 													School Email:
 													mgannon3500@vt.edu
 												</p>
-												<p>
-													GitHub:
-												</p>
-												<a href="https://github.com/Gannon517" class="icon brands alt-fa-github"><span>GitHub</span></a>
 											</div>
 										</div>
 									</div>
