--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
 						<a href="https://www.linkedin.com/in/michaelgannonvt" class="icon brands fa-linkedin"><span>linkedin</span></a>
-						<a href="https://github.com/Gannon517" class="icon brands alt-fa-github"><span>Github</span></a>
+						<a href="https://github.com/Gannon517" class="icon brands fa-github"><span>Github</span></a>
 					</nav>
 
 				<!-- Main -->
