--- a/index.html
+++ b/index.html
@@ -48,13 +48,12 @@
 									<h2>Work</h2>
 								</header>
 								<p>
-									About me: I am a very strong programmer, communicator, and teamworker.
+									I am a very strong programmer, communicator, leader, and teamworker.
 									I have plenty of experience working in the computer science industry and 
-									working from a remote setting and would make a great addition to any 
-									software team. My coding strng suits are presented below, with some of them
-									being low level C programming, iOS App development, Python, Java, and of 
-									course HTML, CSS, and Javascript to create this website and host through Github 
-									and AWS servers.
+									working from a remote setting and in scrum environment, I am perfect addition 
+									to any software team. My coding strong suits include low level C programming, 
+									Swift iOS App development, Python, Java, and of course HTML, CSS, and Javascript 
+									to create this website and host through Github and AWS servers.
 								</p>
 								<section>
 									<div class="row">
@@ -75,6 +74,16 @@
 												Apple's core data type. Some features that are provided in the application include: 
 												Photo Capture Views, Voice recording, Voice to text, Location services, and in app web 
 												views of the national parks website. 
+											</p>
+										</div>
+										<div class="large">
+											<p>
+												Other projects include:
+													-AES Encryption and Decryption developed in Python
+													-External Sorting algorithm with Heaps and mutli-merge sort in Java
+													-Mutli-threaded Thread-pool created in C 
+													-Data Visualiztion for production Data in TypeScript
+													-Multiple python pygame video games created for tutoring purposes
 											</p>
 										</div>
 										</div>
