--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
 										</div>
 										<div class="large">
 											<p>
-												Other projects include:
-													-AES Encryption and Decryption developed in Python
-													-External Sorting algorithm with Heaps and mutli-merge sort in Java
-													-Mutli-threaded Thread-pool created in C 
-													-Data Visualiztion for production Data in TypeScript
+												Other projects include:<br>
+													-AES Encryption and Decryption developed in Python<br>       
+													-External Sorting algorithm with Heaps and mutli-merge sort in Java<br>
+													-Mutli-threaded Thread-pool created in C<br>
+													-Data Visualiztion for production Data in TypeScript<br>
 													-Multiple python pygame video games created for tutoring purposes
 											</p>
 										</div>
