update to work, no pictures, broken down by languages

--- a/index.html
+++ b/index.html
@@ -45,47 +45,25 @@
 						<!-- Work -->
 							<article id="work" class="panel">
 								<header>
-									<h2>Work</h2>
+									<h2>Projects</h2>
 								</header>
 								<p>
-									I am a very strong programmer, communicator, leader, and teamworker.
-									I have plenty of experience working in the computer science industry and 
-									working from a remote setting and in scrum environment, I am perfect addition 
-									to any software team. My coding strong suits include low level C programming, 
-									Swift iOS App development, Python, Java, and of course HTML, CSS, and Javascript 
-									to create this website and host through Github and AWS servers.
+									C:<br>
+									-Mips32 compiler<br>
+									-ThreadPool<br>
+									-HTTP server<br>
+									-Memory Manager<br><br>
+									Python:<br>
+									-AES Encryption and Decryption<br>
+									-A* Pathfinding algorithm<br><br>
+									Java:<br>
+									-External Sorting algorithm<br>
+									-National Geographic Data visualizer<br>
 								</p>
 								<section>
 									<div class="row">
 										<div class="large">
-											<a class="image fit"><img src="images/MipsC.png" alt=""></a>
-											<p>
-												Provided here is my Mips32 compiler created in C. The program takes the assembly
-												file on the left and turns it into the binary file on the right. It uses multiple 
-												C files to parse the input, throw away comments, and uses different case based off
-												what command it is such as a J,I, or R command, or a psuedo command. 
-											</p>
-										<div class="large">
-											<a class="image fit"><img src="images/nationalParks.jpg"></a>
-											<p>
-												The App shown is a National Parks travel Guide Application. It takes advantage of 
-												Online API data to search for national parks within the country and provide details 
-												about them to the user is a Form view. It also stores favorite parks for the user using 
-												Apple's core data type. Some features that are provided in the application include: 
-												Photo Capture Views, Voice recording, Voice to text, Location services, and in app web 
-												views of the national parks website. 
-											</p>
-										</div>
-										<div class="large">
-											<p>
-												Other projects include:<br>
-													-AES Encryption and Decryption developed in Python<br>       
-													-External Sorting algorithm with Heaps and mutli-merge sort in Java<br>
-													-Mutli-threaded Thread-pool created in C<br>
-													-Data Visualiztion for production Data in TypeScript<br>
-													-Multiple python pygame video games created for tutoring purposes
-											</p>
-										</div>
+
 										</div>
 									</div>
 								</section>
