I am a senior now

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>Michael Gannon</h1>
-									<p>Junior Level Computer Scientist</p>
+									<p>Senior Level Computer Scientist</p>
 									<p>studying at Virginia Tech</p>
 								</header>
 								<a href="#work" class="jumplink pic">
