--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
 						<a href="https://www.linkedin.com/in/michaelgannonvt" class="icon brands fa-linkedin"><span>linkedin</span></a>
 						<a href="https://github.com/Gannon517" class="icon brands fa-github"><span>Github</span></a>
+						<a href="#yourmom" class = "icon solid fa-folder"><span>Your Moms</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -86,6 +87,21 @@
 													School Email:
 													mgannon3500@vt.edu
 												</p>
+											</div>
+										</div>
+									</div>
+								</form>
+							</article>
+
+							<article id="yourmom" class="panel">
+								<header>
+									<h2>Did I fuck your mom?</h2>
+								</header>
+								<form action="#" method="post">
+									<div>
+										<div class="row">
+											<div class="col-6">
+												<img src="images/kemp.png" alt="">
 											</div>
 										</div>
 									</div>
