--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
 										<div class="row">
 											<div class="col-6">
 												<img src="images/kemp.png" alt="">
+												<p>
+													Yes I Did 👍🏿
+												</p>
 											</div>
 										</div>
 									</div>
