--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
 						<a href="https://www.linkedin.com/in/michaelgannonvt" class="icon brands fa-linkedin"><span>linkedin</span></a>
 						<!--<a href="https://github.com/Gannon517" class="icon brands fa-github"><span>Github</span></a> -->
-						<a href="#yourmom" class = "icon solid fa-folder"><span>Your Moms</span></a>
+						<a href="#yourmom" class = "icon solid fa-heart"><span>Your Moms</span></a>
 					</nav>
 
 				<!-- Main -->
